<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:text="@string/profile_message"
                android:textSize="21sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:text="@string/name_message"
                android:textSize="21sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_edit"
                android:inputType="textEmailAddress"
                android:hint="@string/name_edit_message"
                android:text="@string/email_val"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textSize="29sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:text="@string/enter_email_message"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/email_edit_message"
                android:text="@string/email_val"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:textSize="29sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:text="@string/picture_message"
                android:textSize="21sp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="39pt"
                android:layout_weight="1"
                android:gravity="fill"
                android:src="@drawable/picture_frame"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:text="@string/click_message"
                android:textSize="21sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/chatBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>